--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ header nav ul li {
     background-position: center;
 }
 
-/* p applies to all text in content section and aside */
+/* applies to all text in content section and aside */
 p {
     font-size: 16px;
 }
